--- a/code/composer.json
+++ b/code/composer.json
@@ -3,7 +3,7 @@
   "type": "library",
   "autoload": {
     "psr-4": {
-      "Kuz\\\\": "src/"
+      "Kuz\\ScanApp": "src/"
     }
   },
   "authors": [
